@@ -571,3 +571,8 @@ SortVector(SqrtModPrime(8,137))					[62,75]
 SortVector(SqrtModPrime(23,193))				[71,122]
 SqrtModPrime(22,149)						[52,97]
 sqrt(22) mod 149						[52,97]
+1i^2								-1
+1i^3								-1i
+1i^4								1
+1i^5								1i
+1i^5070602400912917605986812821505				((1i)^5070602400912917605986812821505)
