@@ -1,3 +1,8 @@
+Tue Oct 28 10:15:10 2003  George Lebl <jirka@5z.com>
+
+	* src/mpwrap.c: be nicer in integer powers of pure imaginary
+	  integers/rationals
+
 Thu Oct 16 10:21:38 2003  George Lebl <jirka@5z.com>
 
 	* Release 0.5.6
